syntax = "proto3";
package models;

message TestMessage {
		string test_field_string = 1;
		bool test_field_bool = 3;
		double test_field_double = 4;
		float test_field_float = 5;
		int32 test_field_int32 = 6;
}

message InnerMessage {
  string field = 1;
}

message MessageContainer {
  InnerMessage inner = 1;
}

